Changes in order tracking response

--- a/app/src/main/res/layout/activity_order_tracking.xml
+++ b/app/src/main/res/layout/activity_order_tracking.xml
@@ -244,7 +244,7 @@
                             android:paddingTop="@dimen/height_10">
 
                             <TextView
-                                android:id="@+id/txtOrderId"
+                                android:id="@+id/txtUsername"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:fontFamily="@font/open_sans_regular"
@@ -258,7 +258,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="@dimen/height_10"
-                                android:layout_toRightOf="@+id/txtOrderId"
+                                android:layout_toRightOf="@+id/txtUsername"
                                 android:fontFamily="@font/open_sans_regular"
                                 android:text="MB1828394839281"
                                 android:textAppearance="?android:attr/textAppearanceSmall"
@@ -275,7 +275,7 @@
                             android:paddingRight="@dimen/height_10">
 
                             <TextView
-                                android:id="@+id/txtOrderDate"
+                                android:id="@+id/txtMobileNumber"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:fontFamily="@font/open_sans_regular"
@@ -288,7 +288,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="@dimen/height_10"
-                                android:layout_toRightOf="@+id/txtOrderDate"
+                                android:layout_toRightOf="@+id/txtMobileNumber"
                                 android:fontFamily="@font/open_sans_regular"
                                 android:text="28/9/2018"
                                 android:textAppearance="?android:attr/textAppearanceSmall"
@@ -310,7 +310,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="@dimen/height_10"
-                            android:layout_toRightOf="@+id/txtOrderDate"
+                            android:layout_toRightOf="@+id/txtMobileNumber"
                             android:fontFamily="@font/open_sans_regular"
                             android:paddingTop="@dimen/height_5"
                             android:text="Intransit"
@@ -328,7 +328,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="@dimen/height_10"
-                            android:layout_toRightOf="@+id/txtOrderDate"
+                            android:layout_toRightOf="@+id/txtMobileNumber"
                             android:fontFamily="@font/open_sans_regular"
                             android:paddingLeft="@dimen/height_10"
                             android:layout_marginTop="@dimen/height_10"
@@ -343,7 +343,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="@dimen/height_10"
-                            android:layout_toRightOf="@+id/txtOrderDate"
+                            android:layout_toRightOf="@+id/txtMobileNumber"
                             android:fontFamily="@font/open_sans_regular"
                             android:paddingLeft="@dimen/height_10"
                             android:paddingTop="@dimen/height_5"
@@ -356,7 +356,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="@dimen/height_10"
-                            android:layout_toRightOf="@+id/txtOrderDate"
+                            android:layout_toRightOf="@+id/txtMobileNumber"
                             android:fontFamily="@font/open_sans_regular"
                             android:paddingLeft="@dimen/height_10"
                             android:paddingTop="@dimen/height_5"
@@ -374,7 +374,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="@dimen/height_10"
                             android:layout_marginTop="@dimen/height_10"
-                            android:layout_toRightOf="@+id/txtOrderDate"
+                            android:layout_toRightOf="@+id/txtMobileNumber"
                             android:fontFamily="@font/open_sans_regular"
                             android:paddingLeft="@dimen/height_10"
                             android:paddingTop="@dimen/height_5"
