--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -12,6 +12,7 @@
         layout="@layout/custom_default_toolbar" />
 
     <TextView
+        android:id="@+id/txtProfile"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/layout_custom_toolbar"
@@ -23,27 +24,11 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textColor="@color/colorblack" />
 
-    <TextView
-        android:id="@+id/txtEdit"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/layout_custom_toolbar"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginLeft="@dimen/height_10"
-        android:layout_marginTop="@dimen/height_15"
-        android:layout_marginRight="@dimen/height_20"
-        android:fontFamily="@font/open_sans_regular"
-        android:text="EDIT"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textColor="@color/colorPrimary"
-        android:textStyle="bold" />
-
     <android.support.v7.widget.CardView
         android:id="@+id/cardview_detail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/txtEdit"
+        android:layout_below="@+id/txtProfile"
         android:layout_marginLeft="@dimen/height_8"
         android:layout_marginTop="@dimen/height_8"
         android:layout_marginRight="@dimen/height_8"
@@ -59,7 +44,7 @@
             android:padding="@dimen/height_10">
 
             <TextView
-                android:id="@+id/txtOrderId"
+                android:id="@+id/txtUsername"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/open_sans_regular"
@@ -76,7 +61,7 @@
                 android:paddingRight="@dimen/height_10">
 
                 <TextView
-                    android:id="@+id/txtOrderDate"
+                    android:id="@+id/txtMobileNumber"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/open_sans_regular"
@@ -86,6 +71,7 @@
 
 
                 <TextView
+                    android:id="@+id/txtEmail"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
@@ -99,6 +85,7 @@
 
 
             <TextView
+                android:id="@+id/txtDob"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/open_sans_regular"
@@ -107,6 +94,7 @@
                 android:textColor="@android:color/black" />
 
             <TextView
+                android:id="@+id/txtVehicleType"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/open_sans_regular"
